@startuml
' MetricMancer datamodell (2025-09-16)

class BaseKPI

class Function {
  +name: str
  +kpis: Dict[str, BaseKPI]
}

class File {
  +name: str
  +file_path: str
  +kpis: Dict[str, BaseKPI]
  +functions: List[Function]
}

class BaseDir {
  +dir_name: str
  +scan_dir_path: str
  +repo_root_path: str
  +repo_name: str
}

class ScanDir extends BaseDir {
  +files: Dict[str, File]
  +scan_dirs: Dict[str, ScanDir]
  +kpis: Dict[str, BaseKPI]
}

class RepoInfo extends ScanDir

RepoInfo --|> ScanDir
ScanDir --|> BaseDir
ScanDir "*" o-- "*" File : files
ScanDir "*" o-- "*" ScanDir : scan_dirs
File "*" o-- "*" Function : functions
File --> BaseKPI : kpis
ScanDir --> BaseKPI : kpis
RepoInfo --> BaseKPI : kpis
Function --> BaseKPI : kpis
@enduml
